// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ac5-random.story (determinism fixture) > matches the golden AST snapshot 1`] = `
{
  "declarations": [
    {
      "aka": [],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": "a",
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 9,
            "endLine": 10,
            "line": 10,
          },
          "words": [
            "room",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 23,
          "endLine": 13,
          "line": 13,
        },
        "text": "A bare eastern room.",
      },
      "exits": [
        {
          "direction": "west",
          "kind": "exit",
          "span": {
            "column": 3,
            "endColumn": 24,
            "endLine": 11,
            "line": 11,
          },
          "to": {
            "article": "the",
            "kind": "name",
            "span": {
              "column": 11,
              "endColumn": 24,
              "endLine": 11,
              "line": 11,
            },
            "words": [
              "West",
              "Room",
            ],
          },
          "via": null,
        },
      ],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 21,
          "endLine": 9,
          "line": 9,
        },
        "words": [
          "East",
          "Room",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [
        {
          "action": "entering",
          "actor": {
            "kind": "ref",
            "ref": {
              "article": "the",
              "kind": "name",
              "span": {
                "column": 9,
                "endColumn": 19,
                "endLine": 15,
                "line": 15,
              },
              "words": [
                "player",
              ],
            },
            "span": {
              "column": 9,
              "endColumn": 19,
              "endLine": 15,
              "line": 15,
            },
          },
          "binding": "object",
          "body": [
            {
              "inlineText": null,
              "kind": "phrase",
              "params": [],
              "phraseKey": "crossing-mutter",
              "span": {
                "column": 5,
                "endColumn": 27,
                "endLine": 16,
                "line": 16,
              },
              "stmtWhen": null,
            },
          ],
          "clauseKind": "after",
          "condition": null,
          "kind": "on-clause",
          "once": false,
          "ordering": null,
          "role": null,
          "span": {
            "column": 3,
            "endColumn": 12,
            "endLine": 17,
            "line": 15,
          },
        },
      ],
      "phraseOverrides": [],
      "placement": null,
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 28,
        "endLine": 15,
        "line": 9,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "aka": [],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": "a",
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 9,
            "endLine": 20,
            "line": 20,
          },
          "words": [
            "room",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 23,
          "endLine": 23,
          "line": 23,
        },
        "text": "A bare western room.",
      },
      "exits": [
        {
          "direction": "east",
          "kind": "exit",
          "span": {
            "column": 3,
            "endColumn": 24,
            "endLine": 21,
            "line": 21,
          },
          "to": {
            "article": "the",
            "kind": "name",
            "span": {
              "column": 11,
              "endColumn": 24,
              "endLine": 21,
              "line": 21,
            },
            "words": [
              "East",
              "Room",
            ],
          },
          "via": null,
        },
      ],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 21,
          "endLine": 19,
          "line": 19,
        },
        "words": [
          "West",
          "Room",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [
        {
          "action": "entering",
          "actor": {
            "kind": "ref",
            "ref": {
              "article": "the",
              "kind": "name",
              "span": {
                "column": 9,
                "endColumn": 19,
                "endLine": 25,
                "line": 25,
              },
              "words": [
                "player",
              ],
            },
            "span": {
              "column": 9,
              "endColumn": 19,
              "endLine": 25,
              "line": 25,
            },
          },
          "binding": "object",
          "body": [
            {
              "inlineText": null,
              "kind": "phrase",
              "params": [],
              "phraseKey": "crossing-mutter",
              "span": {
                "column": 5,
                "endColumn": 27,
                "endLine": 26,
                "line": 26,
              },
              "stmtWhen": null,
            },
          ],
          "clauseKind": "after",
          "condition": null,
          "kind": "on-clause",
          "once": false,
          "ordering": null,
          "role": null,
          "span": {
            "column": 3,
            "endColumn": 12,
            "endLine": 27,
            "line": 25,
          },
        },
        {
          "action": "entering",
          "actor": {
            "kind": "ref",
            "ref": {
              "article": "the",
              "kind": "name",
              "span": {
                "column": 9,
                "endColumn": 19,
                "endLine": 29,
                "line": 29,
              },
              "words": [
                "player",
              ],
            },
            "span": {
              "column": 9,
              "endColumn": 19,
              "endLine": 29,
              "line": 29,
            },
          },
          "binding": "object",
          "body": [
            {
              "inlineText": null,
              "kind": "phrase",
              "params": [],
              "phraseKey": "lucky-draught",
              "span": {
                "column": 5,
                "endColumn": 25,
                "endLine": 30,
                "line": 30,
              },
              "stmtWhen": null,
            },
          ],
          "clauseKind": "after",
          "condition": {
            "kind": "chance",
            "n": 3,
            "span": {
              "column": 35,
              "endColumn": 50,
              "endLine": 29,
              "line": 29,
            },
          },
          "kind": "on-clause",
          "once": false,
          "ordering": null,
          "role": null,
          "span": {
            "column": 3,
            "endColumn": 12,
            "endLine": 31,
            "line": 29,
          },
        },
      ],
      "phraseOverrides": [],
      "placement": null,
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 50,
        "endLine": 29,
        "line": 19,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "aka": [],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": "a",
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 11,
            "endLine": 34,
            "line": 34,
          },
          "words": [
            "person",
          ],
        },
        {
          "article": null,
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 11,
            "endLine": 35,
            "line": 35,
          },
          "words": [
            "playable",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 22,
          "endLine": 38,
          "line": 38,
        },
        "text": "Determined-looking.",
      },
      "exits": [],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": null,
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 12,
          "endLine": 33,
          "line": 33,
        },
        "words": [
          "Alex",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [],
      "phraseOverrides": [],
      "placement": {
        "kind": "placement",
        "place": {
          "article": "the",
          "kind": "name",
          "span": {
            "column": 13,
            "endColumn": 26,
            "endLine": 36,
            "line": 36,
          },
          "words": [
            "East",
            "Room",
          ],
        },
        "relation": "starts-in",
        "span": {
          "column": 3,
          "endColumn": 26,
          "endLine": 36,
          "line": 36,
        },
      },
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 22,
        "endLine": 38,
        "line": 33,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "claims": null,
      "condition": null,
      "key": "crossing-mutter",
      "kind": "define-phrase",
      "span": {
        "column": 1,
        "endColumn": 11,
        "endLine": 46,
        "line": 40,
      },
      "strategy": "randomly",
      "variants": [
        {
          "form": "prose",
          "kind": "text",
          "markers": [],
          "span": {
            "column": 3,
            "endColumn": 32,
            "endLine": 41,
            "line": 41,
          },
          "text": "You mutter about the weather.",
        },
        {
          "form": "prose",
          "kind": "text",
          "markers": [],
          "span": {
            "column": 3,
            "endColumn": 27,
            "endLine": 43,
            "line": 43,
          },
          "text": "You hum a scrap of tune.",
        },
        {
          "form": "prose",
          "kind": "text",
          "markers": [],
          "span": {
            "column": 3,
            "endColumn": 29,
            "endLine": 45,
            "line": 45,
          },
          "text": "Your footsteps echo oddly.",
        },
      ],
      "verbatim": false,
    },
    {
      "entries": [
        {
          "key": "lucky-draught",
          "span": {
            "column": 3,
            "endColumn": 44,
            "endLine": 50,
            "line": 49,
          },
          "value": {
            "form": "prose",
            "kind": "text",
            "markers": [],
            "span": {
              "column": 5,
              "endColumn": 44,
              "endLine": 50,
              "line": 50,
            },
            "text": "A lucky draught of air sweeps past you.",
          },
        },
      ],
      "kind": "define-phrases",
      "locale": "en-US",
      "span": {
        "column": 1,
        "endColumn": 44,
        "endLine": 50,
        "line": 48,
      },
    },
    {
      "body": [
        {
          "kind": "change-player",
          "span": {
            "column": 3,
            "endColumn": 28,
            "endLine": 53,
            "line": 53,
          },
          "stmtWhen": null,
          "target": {
            "article": null,
            "kind": "name",
            "span": {
              "column": 24,
              "endColumn": 28,
              "endLine": 53,
              "line": 53,
            },
            "words": [
              "Alex",
            ],
          },
        },
      ],
      "kind": "start-block",
      "span": {
        "column": 1,
        "endColumn": 11,
        "endLine": 54,
        "line": 52,
      },
    },
  ],
  "grammarHeader": null,
  "header": {
    "fields": {
      "authors": [
        "Sharpee Platform",
      ],
      "description": {
        "kind": "literal",
        "span": {
          "column": 3,
          "endColumn": 79,
          "endLine": 7,
          "line": 7,
        },
        "value": "AC-5 gate fixture - both random forms, no other nondeterminism.",
      },
      "id": "ac5-random",
      "storyVersion": "1.0.0",
      "testers": [],
      "themes": [],
    },
    "kind": "story-header",
    "onClauses": [],
    "ranks": [],
    "scores": [],
    "span": {
      "column": 1,
      "endColumn": 79,
      "endLine": 7,
      "line": 1,
    },
    "states": [],
    "statesReversible": false,
    "timerClauses": [],
    "title": "Determinism Fixture",
    "usePhrasebooks": [],
    "uses": [],
  },
  "kind": "story-file",
  "span": {
    "column": 1,
    "endColumn": 11,
    "endLine": 54,
    "line": 1,
  },
}
`;

exports[`cloak.story (design.md §3.1, ownership grammar) > matches the golden AST snapshot 1`] = `
{
  "declarations": [
    {
      "condition": {
        "kind": "predicate",
        "predicate": {
          "kind": "is",
          "negated": false,
          "span": {
            "column": 56,
            "endColumn": 60,
            "endLine": 9,
            "line": 9,
          },
          "value": {
            "kind": "ref",
            "ref": {
              "article": null,
              "kind": "name",
              "span": {
                "column": 56,
                "endColumn": 60,
                "endLine": 9,
                "line": 9,
              },
              "words": [
                "dark",
              ],
            },
            "span": {
              "column": 56,
              "endColumn": 60,
              "endLine": 9,
              "line": 9,
            },
          },
        },
        "span": {
          "column": 31,
          "endColumn": 60,
          "endLine": 9,
          "line": 9,
        },
        "subject": {
          "base": {
            "kind": "ref",
            "ref": {
              "article": "the",
              "kind": "name",
              "span": {
                "column": 31,
                "endColumn": 43,
                "endLine": 9,
                "line": 9,
              },
              "words": [
                "player",
              ],
            },
            "span": {
              "column": 31,
              "endColumn": 43,
              "endLine": 9,
              "line": 9,
            },
          },
          "field": [
            "location",
          ],
          "kind": "possessive",
          "span": {
            "column": 31,
            "endColumn": 52,
            "endLine": 9,
            "line": 9,
          },
        },
      },
      "kind": "define-condition",
      "name": "in-darkness",
      "span": {
        "column": 1,
        "endColumn": 60,
        "endLine": 9,
        "line": 9,
      },
    },
    {
      "aka": [
        "foyer",
        "hall",
        "entrance",
      ],
      "blockedExits": [
        {
          "condition": null,
          "direction": "north",
          "kind": "blocked-exit",
          "phraseKey": "cant-leave",
          "span": {
            "column": 3,
            "endColumn": 31,
            "endLine": 16,
            "line": 16,
          },
        },
      ],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": "a",
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 9,
            "endLine": 12,
            "line": 12,
          },
          "words": [
            "room",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 65,
          "endLine": 20,
          "line": 18,
        },
        "text": "You are standing in a spacious hall, splendidly decorated in red and gold, with glittering chandeliers overhead. The entrance from the street is to the north, and there are doorways south and west.",
      },
      "exits": [
        {
          "direction": "west",
          "kind": "exit",
          "span": {
            "column": 3,
            "endColumn": 24,
            "endLine": 14,
            "line": 14,
          },
          "to": {
            "article": "the",
            "kind": "name",
            "span": {
              "column": 11,
              "endColumn": 24,
              "endLine": 14,
              "line": 14,
            },
            "words": [
              "Cloakroom",
            ],
          },
          "via": null,
        },
        {
          "direction": "south",
          "kind": "exit",
          "span": {
            "column": 3,
            "endColumn": 25,
            "endLine": 15,
            "line": 15,
          },
          "to": {
            "article": "the",
            "kind": "name",
            "span": {
              "column": 12,
              "endColumn": 25,
              "endLine": 15,
              "line": 15,
            },
            "words": [
              "Foyer",
              "Bar",
            ],
          },
          "via": null,
        },
      ],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 36,
          "endLine": 11,
          "line": 11,
        },
        "words": [
          "Foyer",
          "of",
          "the",
          "Opera",
          "House",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [],
      "phraseOverrides": [],
      "placement": null,
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 71,
        "endLine": 18,
        "line": 11,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "aka": [
        "cloakroom",
      ],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": "a",
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 9,
            "endLine": 23,
            "line": 23,
          },
          "words": [
            "room",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 63,
          "endLine": 27,
          "line": 26,
        },
        "text": "The walls of this small room were clearly once lined with hooks, though now only one remains. The exit is a door to the east.",
      },
      "exits": [],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 21,
          "endLine": 22,
          "line": 22,
        },
        "words": [
          "Cloakroom",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [],
      "phraseOverrides": [],
      "placement": null,
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 67,
        "endLine": 26,
        "line": 22,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "aka": [
        "bar",
      ],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": "a",
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 9,
            "endLine": 30,
            "line": 30,
          },
          "words": [
            "room",
          ],
        },
        {
          "article": null,
          "condition": {
            "kind": "predicate",
            "predicate": {
              "kind": "has",
              "span": {
                "column": 37,
                "endColumn": 53,
                "endLine": 30,
                "line": 30,
              },
              "thing": {
                "article": "the",
                "kind": "name",
                "span": {
                  "column": 37,
                  "endColumn": 53,
                  "endLine": 30,
                  "line": 30,
                },
                "words": [
                  "velvet",
                  "cloak",
                ],
              },
            },
            "span": {
              "column": 22,
              "endColumn": 53,
              "endLine": 30,
              "line": 30,
            },
            "subject": {
              "kind": "ref",
              "ref": {
                "article": "the",
                "kind": "name",
                "span": {
                  "column": 22,
                  "endColumn": 32,
                  "endLine": 30,
                  "line": 30,
                },
                "words": [
                  "player",
                ],
              },
              "span": {
                "column": 22,
                "endColumn": 32,
                "endLine": 30,
                "line": 30,
              },
            },
          },
          "config": [],
          "kind": "composition",
          "span": {
            "column": 11,
            "endColumn": 53,
            "endLine": 30,
            "line": 30,
          },
          "words": [
            "dark",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 56,
          "endLine": 35,
          "line": 33,
        },
        "text": "The bar, much rougher than you'd have guessed after the opulence of the foyer to the north, is completely empty. There seems to be some sort of message scrawled in the sawdust on the floor.",
      },
      "exits": [],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 21,
          "endLine": 29,
          "line": 29,
        },
        "words": [
          "Foyer",
          "Bar",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [
        {
          "action": "entering",
          "actor": {
            "kind": "ref",
            "ref": {
              "article": "the",
              "kind": "name",
              "span": {
                "column": 9,
                "endColumn": 19,
                "endLine": 37,
                "line": 37,
              },
              "words": [
                "player",
              ],
            },
            "span": {
              "column": 9,
              "endColumn": 19,
              "endLine": 37,
              "line": 37,
            },
          },
          "binding": "object",
          "body": [
            {
              "inlineText": null,
              "kind": "phrase",
              "params": [],
              "phraseKey": "stumble",
              "span": {
                "column": 5,
                "endColumn": 19,
                "endLine": 38,
                "line": 38,
              },
              "stmtWhen": null,
            },
            {
              "body": [
                {
                  "entity": {
                    "article": "the",
                    "kind": "name",
                    "span": {
                      "column": 14,
                      "endColumn": 25,
                      "endLine": 40,
                      "line": 40,
                    },
                    "words": [
                      "message",
                    ],
                  },
                  "kind": "change",
                  "span": {
                    "column": 7,
                    "endColumn": 37,
                    "endLine": 40,
                    "line": 40,
                  },
                  "state": "trampled",
                  "stmtWhen": null,
                },
              ],
              "kind": "ordinal",
              "ordinal": 1,
              "ordinalWord": "first",
              "span": {
                "column": 5,
                "endColumn": 37,
                "endLine": 40,
                "line": 39,
              },
            },
            {
              "body": [
                {
                  "entity": {
                    "article": "the",
                    "kind": "name",
                    "span": {
                      "column": 14,
                      "endColumn": 25,
                      "endLine": 42,
                      "line": 42,
                    },
                    "words": [
                      "message",
                    ],
                  },
                  "kind": "change",
                  "span": {
                    "column": 7,
                    "endColumn": 40,
                    "endLine": 42,
                    "line": 42,
                  },
                  "state": "obliterated",
                  "stmtWhen": null,
                },
              ],
              "kind": "ordinal",
              "ordinal": 3,
              "ordinalWord": "third",
              "span": {
                "column": 5,
                "endColumn": 40,
                "endLine": 42,
                "line": 41,
              },
            },
          ],
          "clauseKind": "after",
          "condition": {
            "kind": "condition-ref",
            "name": "in-darkness",
            "span": {
              "column": 35,
              "endColumn": 46,
              "endLine": 37,
              "line": 37,
            },
          },
          "kind": "on-clause",
          "once": false,
          "ordering": null,
          "role": null,
          "span": {
            "column": 3,
            "endColumn": 12,
            "endLine": 43,
            "line": 37,
          },
        },
      ],
      "phraseOverrides": [],
      "placement": null,
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 46,
        "endLine": 37,
        "line": 29,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "aka": [],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": "a",
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 11,
            "endLine": 46,
            "line": 46,
          },
          "words": [
            "person",
          ],
        },
        {
          "article": null,
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 11,
            "endLine": 47,
            "line": 47,
          },
          "words": [
            "playable",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 27,
          "endLine": 51,
          "line": 51,
        },
        "text": "As good-looking as ever.",
      },
      "exits": [],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": null,
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 12,
          "endLine": 45,
          "line": 45,
        },
        "words": [
          "Alex",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [],
      "phraseOverrides": [],
      "placement": {
        "kind": "placement",
        "place": {
          "article": "the",
          "kind": "name",
          "span": {
            "column": 13,
            "endColumn": 41,
            "endLine": 48,
            "line": 48,
          },
          "words": [
            "Foyer",
            "of",
            "the",
            "Opera",
            "House",
          ],
        },
        "relation": "starts-in",
        "span": {
          "column": 3,
          "endColumn": 41,
          "endLine": 48,
          "line": 48,
        },
      },
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 27,
        "endLine": 51,
        "line": 45,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [
        {
          "article": "the",
          "kind": "name",
          "span": {
            "column": 9,
            "endColumn": 25,
            "endLine": 49,
            "line": 49,
          },
          "words": [
            "velvet",
            "cloak",
          ],
        },
      ],
    },
    {
      "aka": [
        "cloak",
      ],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": null,
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 11,
            "endLine": 55,
            "line": 55,
          },
          "words": [
            "wearable",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 37,
          "endLine": 59,
          "line": 57,
        },
        "text": "A handsome cloak, of velvet trimmed with satin, and slightly splattered with raindrops. Its blackness is so deep that it almost seems to suck light from the room.",
      },
      "exits": [],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 24,
          "endLine": 53,
          "line": 53,
        },
        "words": [
          "velvet",
          "cloak",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [],
      "phraseOverrides": [],
      "placement": null,
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 63,
        "endLine": 57,
        "line": 53,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "aka": [
        "hook",
        "peg",
      ],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": null,
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 10,
            "endLine": 63,
            "line": 63,
          },
          "words": [
            "scenery",
          ],
        },
        {
          "article": "a",
          "condition": null,
          "config": [
            {
              "key": [
                "capacity",
              ],
              "span": {
                "column": 29,
                "endColumn": 39,
                "endLine": 63,
                "line": 63,
              },
              "value": "1",
              "valueKind": "number",
            },
          ],
          "kind": "composition",
          "span": {
            "column": 12,
            "endColumn": 39,
            "endLine": 63,
            "line": 63,
          },
          "words": [
            "supporter",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": {
        "form": "prose",
        "kind": "text",
        "markers": [],
        "span": {
          "column": 3,
          "endColumn": 53,
          "endLine": 66,
          "line": 66,
        },
        "text": "It's just a small brass hook, screwed to the wall.",
      },
      "exits": [],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 22,
          "endLine": 61,
          "line": 61,
        },
        "words": [
          "brass",
          "hook",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [],
      "phraseOverrides": [],
      "placement": {
        "kind": "placement",
        "place": {
          "article": "the",
          "kind": "name",
          "span": {
            "column": 6,
            "endColumn": 19,
            "endLine": 64,
            "line": 64,
          },
          "words": [
            "Cloakroom",
          ],
        },
        "relation": "in",
        "span": {
          "column": 3,
          "endColumn": 19,
          "endLine": 64,
          "line": 64,
        },
      },
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 53,
        "endLine": 66,
        "line": 61,
      },
      "spreads": [],
      "startsStates": [],
      "states": [],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "aka": [
        "message",
        "sawdust",
        "floor",
        "writing",
      ],
      "blockedExits": [],
      "burdens": [],
      "carries": [],
      "codes": [],
      "compositions": [
        {
          "article": null,
          "condition": null,
          "config": [],
          "kind": "composition",
          "span": {
            "column": 3,
            "endColumn": 10,
            "endLine": 70,
            "line": 70,
          },
          "words": [
            "scenery",
          ],
        },
      ],
      "containing": [],
      "counters": [],
      "deadly": null,
      "deadlyExits": [],
      "description": null,
      "exits": [],
      "feels": [],
      "goals": [],
      "honors": [],
      "influences": [],
      "initialDescription": null,
      "kind": "create",
      "knows": [],
      "landing": null,
      "moods": [],
      "moveClauses": [],
      "name": {
        "article": "the",
        "kind": "name",
        "span": {
          "column": 8,
          "endColumn": 34,
          "endLine": 68,
          "line": 68,
        },
        "words": [
          "message",
          "in",
          "the",
          "sawdust",
        ],
      },
      "nevers": [],
      "obligations": [],
      "onClauses": [
        {
          "action": "reading",
          "actor": {
            "kind": "ref",
            "ref": {
              "article": "the",
              "kind": "name",
              "span": {
                "column": 6,
                "endColumn": 16,
                "endLine": 74,
                "line": 74,
              },
              "words": [
                "player",
              ],
            },
            "span": {
              "column": 6,
              "endColumn": 16,
              "endLine": 74,
              "line": 74,
            },
          },
          "binding": "object",
          "body": [
            {
              "arms": [
                {
                  "body": [
                    {
                      "inlineText": null,
                      "kind": "phrase",
                      "params": [],
                      "phraseKey": "message-intact",
                      "span": {
                        "column": 9,
                        "endColumn": 30,
                        "endLine": 77,
                        "line": 77,
                      },
                      "stmtWhen": null,
                    },
                    {
                      "kind": "win",
                      "phraseKey": null,
                      "span": {
                        "column": 9,
                        "endColumn": 12,
                        "endLine": 78,
                        "line": 78,
                      },
                      "stmtWhen": null,
                    },
                  ],
                  "span": {
                    "column": 7,
                    "endColumn": 18,
                    "endLine": 76,
                    "line": 76,
                  },
                  "value": "intact",
                },
                {
                  "body": [
                    {
                      "inlineText": null,
                      "kind": "phrase",
                      "params": [],
                      "phraseKey": "message-trampled",
                      "span": {
                        "column": 9,
                        "endColumn": 32,
                        "endLine": 80,
                        "line": 80,
                      },
                      "stmtWhen": null,
                    },
                  ],
                  "span": {
                    "column": 7,
                    "endColumn": 20,
                    "endLine": 79,
                    "line": 79,
                  },
                  "value": "trampled",
                },
                {
                  "body": [
                    {
                      "inlineText": null,
                      "kind": "phrase",
                      "params": [],
                      "phraseKey": "message-obliterated",
                      "span": {
                        "column": 9,
                        "endColumn": 35,
                        "endLine": 82,
                        "line": 82,
                      },
                      "stmtWhen": null,
                    },
                    {
                      "kind": "lose",
                      "phraseKey": null,
                      "span": {
                        "column": 9,
                        "endColumn": 13,
                        "endLine": 83,
                        "line": 83,
                      },
                      "stmtWhen": null,
                    },
                  ],
                  "span": {
                    "column": 7,
                    "endColumn": 23,
                    "endLine": 81,
                    "line": 81,
                  },
                  "value": "obliterated",
                },
              ],
              "kind": "select-on",
              "span": {
                "column": 5,
                "endColumn": 15,
                "endLine": 84,
                "line": 75,
              },
              "subject": {
                "base": {
                  "kind": "ref",
                  "ref": {
                    "article": "the",
                    "kind": "name",
                    "span": {
                      "column": 15,
                      "endColumn": 28,
                      "endLine": 75,
                      "line": 75,
                    },
                    "words": [
                      "message",
                    ],
                  },
                  "span": {
                    "column": 15,
                    "endColumn": 28,
                    "endLine": 75,
                    "line": 75,
                  },
                },
                "field": [
                  "state",
                ],
                "kind": "possessive",
                "span": {
                  "column": 15,
                  "endColumn": 34,
                  "endLine": 75,
                  "line": 75,
                },
              },
            },
          ],
          "clauseKind": "on",
          "condition": null,
          "kind": "on-clause",
          "once": false,
          "ordering": null,
          "role": null,
          "span": {
            "column": 3,
            "endColumn": 9,
            "endLine": 85,
            "line": 74,
          },
        },
      ],
      "phraseOverrides": [],
      "placement": {
        "kind": "placement",
        "place": {
          "article": "the",
          "kind": "name",
          "span": {
            "column": 6,
            "endColumn": 19,
            "endLine": 71,
            "line": 71,
          },
          "words": [
            "Foyer",
            "Bar",
          ],
        },
        "relation": "in",
        "span": {
          "column": 3,
          "endColumn": 19,
          "endLine": 71,
          "line": 71,
        },
      },
      "pronouns": [],
      "resists": [],
      "scores": [],
      "span": {
        "column": 1,
        "endColumn": 24,
        "endLine": 74,
        "line": 68,
      },
      "spreads": [],
      "startsStates": [],
      "states": [
        {
          "name": "intact",
          "span": {
            "column": 11,
            "endColumn": 17,
            "endLine": 72,
            "line": 72,
          },
        },
        {
          "name": "trampled",
          "span": {
            "column": 19,
            "endColumn": 27,
            "endLine": 72,
            "line": 72,
          },
        },
        {
          "name": "obliterated",
          "span": {
            "column": 29,
            "endColumn": 40,
            "endLine": 72,
            "line": 72,
          },
        },
      ],
      "statesReversible": false,
      "temperaments": [],
      "thinks": [],
      "timerClauses": [],
      "wears": [],
    },
    {
      "body": [],
      "constraints": [],
      "directions": [],
      "greedy": [],
      "kind": "extend-action",
      "musts": [],
      "name": "putting",
      "otherwise": null,
      "patterns": [
        {
          "cardinality": null,
          "means": [],
          "parts": [
            {
              "kind": "word",
              "span": {
                "column": 5,
                "endColumn": 9,
                "endLine": 89,
                "line": 89,
              },
              "word": "hook",
            },
            {
              "kind": "slot",
              "span": {
                "column": 10,
                "endColumn": 18,
                "endLine": 89,
                "line": 89,
              },
              "word": "item",
            },
            {
              "kind": "word",
              "span": {
                "column": 19,
                "endColumn": 21,
                "endLine": 89,
                "line": 89,
              },
              "word": "on",
            },
            {
              "kind": "slot",
              "span": {
                "column": 22,
                "endColumn": 30,
                "endLine": 89,
                "line": 89,
              },
              "word": "hook",
            },
          ],
          "span": {
            "column": 5,
            "endColumn": 30,
            "endLine": 89,
            "line": 89,
          },
        },
      ],
      "phrases": null,
      "refusals": [],
      "scores": [],
      "slotTypes": [],
      "span": {
        "column": 1,
        "endColumn": 10,
        "endLine": 88,
        "line": 87,
      },
    },
    {
      "entries": [
        {
          "key": "cant-leave",
          "span": {
            "column": 3,
            "endColumn": 25,
            "endLine": 94,
            "line": 92,
          },
          "value": {
            "form": "prose",
            "kind": "text",
            "markers": [],
            "span": {
              "column": 5,
              "endColumn": 25,
              "endLine": 94,
              "line": 93,
            },
            "text": "You've only just arrived, and besides, the weather outside seems to be getting worse.",
          },
        },
        {
          "key": "stumble",
          "span": {
            "column": 3,
            "endColumn": 53,
            "endLine": 96,
            "line": 95,
          },
          "value": {
            "form": "prose",
            "kind": "text",
            "markers": [],
            "span": {
              "column": 5,
              "endColumn": 53,
              "endLine": 96,
              "line": 96,
            },
            "text": "Blundering around in the dark isn't a good idea!",
          },
        },
        {
          "key": "message-intact",
          "span": {
            "column": 3,
            "endColumn": 70,
            "endLine": 98,
            "line": 97,
          },
          "value": {
            "form": "prose",
            "kind": "text",
            "markers": [],
            "span": {
              "column": 5,
              "endColumn": 70,
              "endLine": 98,
              "line": 98,
            },
            "text": "The message, neatly marked in the sawdust, reads... You have won!",
          },
        },
        {
          "key": "message-trampled",
          "span": {
            "column": 3,
            "endColumn": 37,
            "endLine": 100,
            "line": 99,
          },
          "value": {
            "form": "prose",
            "kind": "text",
            "markers": [
              {
                "content": "garbled",
                "span": {
                  "column": 28,
                  "endColumn": 37,
                  "endLine": 100,
                  "line": 100,
                },
              },
            ],
            "span": {
              "column": 5,
              "endColumn": 37,
              "endLine": 100,
              "line": 100,
            },
            "text": "You can just make out: {garbled}",
          },
        },
        {
          "key": "message-obliterated",
          "span": {
            "column": 3,
            "endColumn": 69,
            "endLine": 102,
            "line": 101,
          },
          "value": {
            "form": "prose",
            "kind": "text",
            "markers": [],
            "span": {
              "column": 5,
              "endColumn": 69,
              "endLine": 102,
              "line": 102,
            },
            "text": "The message has been trampled beyond recognition. You have lost!",
          },
        },
      ],
      "kind": "define-phrases",
      "locale": "en-US",
      "span": {
        "column": 1,
        "endColumn": 69,
        "endLine": 102,
        "line": 91,
      },
    },
    {
      "kind": "define-text",
      "modulePath": "./extras.ts",
      "name": "garbled",
      "span": {
        "column": 1,
        "endColumn": 39,
        "endLine": 104,
        "line": 104,
      },
    },
    {
      "body": [
        {
          "kind": "change-player",
          "span": {
            "column": 3,
            "endColumn": 28,
            "endLine": 107,
            "line": 107,
          },
          "stmtWhen": null,
          "target": {
            "article": null,
            "kind": "name",
            "span": {
              "column": 24,
              "endColumn": 28,
              "endLine": 107,
              "line": 107,
            },
            "words": [
              "Alex",
            ],
          },
        },
      ],
      "kind": "start-block",
      "span": {
        "column": 1,
        "endColumn": 11,
        "endLine": 108,
        "line": 106,
      },
    },
  ],
  "grammarHeader": null,
  "header": {
    "fields": {
      "authors": [
        "Roger Firth (Sharpee implementation)",
      ],
      "description": {
        "kind": "literal",
        "span": {
          "column": 3,
          "endColumn": 62,
          "endLine": 7,
          "line": 7,
        },
        "value": "A basic IF demonstration - hang up your cloak!",
      },
      "id": "cloak-of-darkness",
      "storyVersion": "1.0.0",
      "testers": [],
      "themes": [],
    },
    "kind": "story-header",
    "onClauses": [],
    "ranks": [],
    "scores": [],
    "span": {
      "column": 1,
      "endColumn": 62,
      "endLine": 7,
      "line": 1,
    },
    "states": [],
    "statesReversible": false,
    "timerClauses": [],
    "title": "Cloak of Darkness",
    "usePhrasebooks": [],
    "uses": [],
  },
  "kind": "story-file",
  "span": {
    "column": 1,
    "endColumn": 11,
    "endLine": 108,
    "line": 1,
  },
}
`;
